# weather_landscape

./: .gitignore  README.md  pyproject.toml  run_test.py  server.py
weather_landscape/: __init__.py  draw_weather.py  openweathermap.py  sprites.py  weather_landscape.py
